--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,12 @@
 [config]
-width = 1260
-height = 720
+; width = 1260
+; height = 720
+width = 1920
+height = 1080
 score = 0
 speed = 0.1
 scale = 30
 fps = 60
-volume = 0.03
+volume = 0.3
 background = desert.jpg
 color = white
