--- a/resources/config.ini
+++ b/resources/config.ini
@@ -6,10 +6,9 @@ speed = 0.1
 scale = 30
 fps = 60
 volume = 0.0
+muted_volume = 0.1
 background = desert.png
 color = white
 eat = jump.wav
 game_over = jump.wav
-
-[highscores]
 
