--- a/resources/config.ini
+++ b/resources/config.ini
@@ -9,6 +9,5 @@ volume = 0.0
 muted_volume = 0.1
 background = desert.png
 color = white
-eat = jump.wav
-game_over = jump.wav
-
+eat = pick_up.wav
+game_over = game_over.wav
